Fixed mobile drawer spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,14 +8,6 @@
   --background-end-rgb: 0, 0, 0;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -32,7 +24,7 @@ body {
   text-transform: uppercase;
   font-size: 1.25rem !important;
   line-height: 1.75rem !important;
-  margin: 2.5rem !important;
+  margin: 1rem 2.5rem !important;
 }
 
 .header-link {
